<resources>
    <string name="app_name">Game discovery app</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="something_wrong">Something wrong</string>
    <string name="filter">Filters</string>
    <string name="genres_title">Genres</string>
    <string name="platforms_title">Platforms</string>
    <string name="retry_button">Retry</string>
    <string name="image_description">image</string>
    <string name="years_tint">Years</string>
    <string name="confirm_button">Confirm</string>
    <string name="clear_button">Clear</string>
    <string name="search_hint">Search</string>
    <string name="released_title">Released:</string>
    <string name="favorite_button_cont_desc">Favorite button</string>
    <string name="favorite_menu_tittle">Favorite</string>
</resources>