<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.FilterFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:gravity="center"
                android:text="@string/filter"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/clearTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_button"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:clickable="true"
                android:textColor="@color/light_blue_600"
                app:drawableEndCompat="@drawable/ic_baseline_clear_24"
                android:drawablePadding="8dp"
                android:focusable="true" />


        <TextView
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:text="@string/years_tint" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rangeSlider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:contentDescription="@string/title_home"
            android:stepSize="1"
            android:valueFrom="1970.0"
            android:valueTo="2025.0"
            app:values="@array/year_range" />

        <TextView
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:text="@string/genres_title" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipsGenresContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp" >

        </com.google.android.material.chip.ChipGroup>

        <TextView
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="12dp"
            android:text="@string/platforms_title" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipsPlatformsContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp" >

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:text="@string/confirm_button"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>