<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/filterButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toEndOf="@id/input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/input_layout"
        app:layout_constraintBottom_toBottomOf="@id/input_layout"
        android:src="@drawable/tune_48px"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:endIconMode="clear_text"
        app:hintAnimationEnabled="true"
        app:expandedHintEnabled="true"
        android:hint="@string/search_hint"
        app:layout_constraintEnd_toStartOf="@id/filterButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/filterButton"
        app:startIconContentDescription="@string/app_name"
        app:startIconDrawable="@drawable/ic_baseline_search_24">

        <EditText
            android:id="@+id/editTextInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="12dp"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:selectAllOnFocus="true"
            tools:text="Android"
            android:importantForAutofill="no" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/error_messageTV"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/something_wrong"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/retryButtonMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/retry_button"
        app:layout_constraintEnd_toEndOf="@id/error_messageTV"
        app:layout_constraintStart_toStartOf="@id/error_messageTV"
        app:layout_constraintTop_toBottomOf="@id/error_messageTV" />


    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/prepend_progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/append_progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:scrollbarSize="4dp"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/append_progressIndicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout"
        tools:listitem="@layout/game_item" />

    <ProgressBar
        android:id="@+id/progressBarLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
